--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.0",
     "react-icons": "^4.3.1",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "rsuite": "^5.5.2",
+    "sass": "^1.49.9",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
